--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.App__container {
   min-height: 100vh;
+  background-color: #e8eaed;
+}
+
+.App {
+  width: 500px;
+  padding: 20px;
+  margin: auto;
+}
+
+.Main-create__container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: flex-end;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 5px 10px 8px #75757570;
+  background-color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  padding: 5px 15px;
+  border: 1px solid #4469ae;
+  border-radius: 5px;
+  background-color: #4469ae;
+  color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button:hover {
+  background-color: #164db3;
+  color: #fff;
+}
+
+.Post {
+  padding: 20px;
+  margin-top: 20px;
+  border-radius: 5px;
+  box-shadow: 5px 10px 8px #75757570;
+  background-color: #fff;
+}
+
+.Post__header {
+  display: flex;
+}
+
+.Post-creator__img {
+  width: 35px;
+  height: 35px;
+  background-color: #989a9c;
+  border-radius: 50%;
+}
+
+.Post__about {
+  margin-left: 8px;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.Post-creator__name {
+  color: #4469ae;
+}
+
+.Post-creator__info {
+  color: #757575;
+}
+
+.Post__time {
+  margin-left: 15px;
+}
+
+.Post__text {
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+.Loader__container:first-child {
+  margin-top: 35px;
+}
+
+.Loader__container {
+  margin-top: 70px;
+}
+
+.NewPost__container {
+  display: flex;
+  flex-flow: column;
+}
+
+.Form__close {
+  border: none;
+  margin-bottom: 20px;
+  font-size: 20px;
+  background-color: inherit;
+  align-self: flex-end;
+}
+
+.Form__textbox {
+  width: 100%;
+  height: 85px;
+  padding: 10px;
+  display: block;
+  resize: none;
+  outline: none;
+}
+
+.Form__button {
+  margin-top: 20px;
 }
